# medialocate

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GPG_SETUP.md  LICENSE  README.md  RELEASE.md  REPOSITORY_ALIGNMENT_ACTIONS.md  TEST_FAILURES.md  TODO.md  VERSIONING.md  mypy.ini  pyproject.toml  pyproject.toml.saved  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/: branch_naming.md  pull_request_template.md
.github/actions/setup-poetry/: action.yml
.github/actions/setup-system-deps/: action.yml
.github/workflows/: branch-protection.yml  ci.yml
action_history/: ACTIONS_2024-12-07_completed.md  ACTIONS_2024_12_08_completed.md
docs/: project_analysis.md
res/locate/: medialocate_epilog.html
sandbox/paris/: sainte-chapelle.jpg_original
scripts/: README.md  generate_changelog.py  release_validation.py  version_increment.py  version_increment.sh
src/: group_media.py  list.py  locate_media.py  process_files.py  proxy_media.py
src/batch/: controler.py  status.py
src/batch_controler/: batch_controler.py  batch_status.py
src/file_finder/: file_finder.py
src/finder/: file.py
src/gps_location/: location.py
src/location/: gps.py
src/media/: group_proxy.py  location_grouping.py  locator.py  parameters.py
src/media_location/: media_groups.py  media_locate_action.py  media_proxies.py  parameters.py
src/medialocate/: __init__.py  group_media.py  locate_media.py  process_files.py  proxy_media.py
src/medialocate/batch/: __init__.py  controler.py  status.py
src/medialocate/finder/: __init__.py  file.py
src/medialocate/location/: __init__.py  gps.py
src/medialocate/media/: __init__.py  alternate_thumb_extraction.py.txt  group_proxy.py  location_grouping.py  locator.py  parameters.py
src/medialocate/store/: __init__.py  dict.py
src/medialocate/util/: __init__.py  file_naming.py  media_type.py  url_validator.py
src/medialocate/web/: __init__.py  media_server.py
src/simple_store/: dict_store.py
src/store/: dict.py
src/util/: file_naming.py  media_type.py
src/web/: media_server.py
src/web/ux/: api_endpoints.js  custom_events.js  index.html  media_helper.js  medialocate_albums.css  medialocate_info.css  medialocate_overall.css
src/web_ux/: content.js  content.js.old  mapsetup.js  medialocate.html
test/: batch_controler_unittest.py  batch_status_unittest.py  batchfile_process_controler_unittest.py  batchfile_process_status_unittest.py  file_finder_unittest.py  json_store_unittest.py  location_gps_unittest.py  media_group_proxy_unittest.py  media_location_grouping_unittest.py  media_locator_unittest.py  store_dict_unittest.py
tests/: conftest.py
tests/integration/: test_group_media.py  test_locate_media.py  test_media_server_integration.py  test_process_files.py  test_proxy_media.py
tests/release_validation/: __init__.py  test_compatibility.py  test_package_installation.py  test_performance.py  test_security.py
tests/unit/batch/: test_controller.py  test_status.py
tests/unit/finder/: test_file.py
tests/unit/location/: test_gps.py
tests/unit/media/: test_group_proxy.py  test_location_grouping.py  test_locator.py
tests/unit/store/: test_dict.py
tests/unit/util/: test_file_naming.py  test_media_type.py  (+1 more)
(+34 files in other folders)
