[tool.poetry]
name = "medialocate"
version = "0.1.0"
description = "A tool for analyzing and grouping media files based on geolocation data"
authors = ["jmarc580625 <jmarc580625+github@gmail.com>"]
readme = "README.md"
packages = [
    { include = "medialocate", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PyExifTool = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
bandit = "^1.7.5"
pre-commit = "^3.3.3"
debugpy = "^1.8.0"

[tool.bandit]
exclude_dirs = ["tests", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
