[tool.poetry]
name = "medialocate"
version = "0.1.0"
description = "A tool for analyzing and grouping media files based on geolocation data"
authors = ["jmarc580625 <jmarc580625+github@gmail.com>"]
readme = "README.md"
packages = [
    { include = "medialocate", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PyExifTool = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.13.0"
bandit = "^1.8.0"
pre-commit = "^3.3.3"
debugpy = "^1.8.0"

[tool.bandit]
exclude_dirs = ["tests", "test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    --cov=src/medialocate
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html
    --cov-fail-under=80
"""

[tool.coverage.run]
source = ["src/medialocate"]
omit = ["tests/*", "test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
