[tool.poetry]
name = "medialocate"
version = "0.1.0"
description = "A Python tool for analyzing and organizing media files based on geolocation data"
authors = ["jmarc580625 <jmarc580625+github@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["media", "geolocation", "gps", "exif", "photo-management", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [
    { include = "medialocate", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PyExifTool = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.13.0"
bandit = "^1.8.0"
pre-commit = "^3.3.3"
debugpy = "^1.8.0"

[tool.pytest.ini_options]
# Configuration in pytest.ini


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
